# car-listing-visual-verification

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
car_listing_visual_verification/: __init__.py  config.py  data_loader.py  dataset.py  evaluate.py  features.py  inference.py  plots.py  train.py
car_listing_visual_verification/api/: main.py
car_listing_visual_verification/data/: __init__.py  drom.py  drom_client.py  drom_content_filter.py  drom_hf.py  drom_metrics.py  drom_parsers.py  drom_pipeline.py  drom_types.py  drom_utils.py
car_listing_visual_verification/modeling/: car_gate.py  predict.py  predictor.py  train.py
configs/: classes.yaml
notebooks/: EDA.ipynb  bbox_check.ipynb
