[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "car_listing_visual_verification"
version = "0.0.1"
description = "Automatic verification of car listing images against declared make and model using computer vision."
authors = [
  { name = "Ruslan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["car_listing_visual_verification"]
include = ["pyproject.toml", "car_listing_visual_verification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["car_listing_visual_verification"]
force-sort-within-sections = true

